--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
   },
   "dependencies": {
     "expo": "~42.0.0",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "^9.2.1",
+    "expo-media-library": "^12.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.6.5",
+    "react-navigation": "^4.4.4",
+    "react-navigation-drawer": "^2.7.1",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
